# fast-video-compress

./: .gitignore  Cargo.toml  DEPENDENCIES.md  README.md  app_refactored.py  build.rs  build_dist.bat  build_mac_app.sh  lint.sh  pyproject.toml  pyrightconfig.json  setup.iss  test_final_scenario.py  vidozip.icns  使用说明.txt
src/: cli.rs  lib.rs  main.rs
src/video_compress/: __init__.py  cli.py  core.py  errors.py  models.py  ui.py  utils.py  worker.py
